--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Shell for SDM mode for EvoLogics S2C Underwater Acoustic Modems
 
-Documentation online: https://github.com/ramok/sdmsh/wiki
+Documentation online: https://github.com/evologics/sdmsh/wiki
